@@ -16,6 +16,10 @@ Z* -------------------------------------------------------------------
 #ifndef _H_os_predef
 #define _H_os_predef
 
+#ifdef WIN32
+#define __inline__ __inline
+#endif
+
 #ifdef _WIN32
 #ifndef _AFXDLL
 	#ifndef _UNICODE
